Fix bug with broken css

--- a/src/css/code/workspace-item.css
+++ b/src/css/code/workspace-item.css
@@ -419,5 +419,3 @@
     overflow-x: auto;
   }
 }
-
-@media only screen and (--u-viewport_max-lg) {
